core/force-app/main/default/objects/SchedulerProvider__c/SchedulerProvider__c.object-meta.xml
<CustomObject>
    <label>Scheduler Provider</label>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduler Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>