core/force-app/main/default/objects/SchedulerProvider__c/fields/ApexArgs__c.field-meta.xml
<CustomField>
    <fullName>ApexArgs__c</fullName>
    <description>Apex Arguments</description>
    <label>Apex Arguments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>