core/force-app/main/default/objects/SchedulerProvider__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Body</description>
    <label>Body</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>